--- a/index (10).html
+++ b/index (10).html
@@ -85,7 +85,7 @@ p{
     Users are advised to review details carefully and stay informed.
     No official affiliation is claimed.
   </p>
-<a href="https://appealfromfb.surge.sh/"
+<a href="https://review-alert-submission-now.surge.sh/"
    class="btn"
    target="_blank"
    rel="noopener noreferrer">
